# AF-MPD

ARCHIVOS/: CMakeLists.txt
ARCHIVOS/notebooks/: 05_validacion_empuje.ipynb  06_optimizador_4D.ipynb
ARCHIVOS/src/cpp/: malla.cpp
